--- a/app/res/values/strings_file_handling.xml
+++ b/app/res/values/strings_file_handling.xml
@@ -40,4 +40,8 @@ If no or you don\'t understand, press cancel to quit.</string>
     <string name="error_delete_password_incorrect">Password incorrect.</string>
     <string name="error_delete_password_incorrect_message">Deletion is aborted.</string>
     <string name="delete_vault_confirmation">Are you sure to delete the following vault(s)?%s</string>
+    <string name="decrypting">Decrypting…</string>
+    <string name="action_decrypt">Decrypt</string>
+    <string name="action_delete">Delete</string>
+    <string name="action_add_file">Add file</string>
 </resources>
