--- a/app/res/layout/dialog_finish_stealth.xml
+++ b/app/res/layout/dialog_finish_stealth.xml
@@ -19,10 +19,10 @@
   ~ under the License.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-</LinearLayout>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/password"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:text="*# "
+    android:textAppearance="?android:attr/textAppearanceLarge" />
