--- a/app/res/layout/file_item.xml
+++ b/app/res/layout/file_item.xml
@@ -1,5 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--
+  ~ Licensed to the Apache Software Foundation (ASF) under one
+  ~ or more contributor license agreements.  See the NOTICE file
+  ~ distributed with this work for additional information
+  ~ regarding copyright ownership.  The ASF licenses this file
+  ~ to you under the Apache License, Version 2.0 (the
+  ~ "License"); you may not use this file except in compliance
+  ~ with the License.  You may obtain a copy of the License at
+  ~
+  ~   http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing,
+  ~ software distributed under the License is distributed on an
+  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+  ~ KIND, either express or implied.  See the License for the
+  ~ specific language governing permissions and limitations
+  ~ under the License.
+  -->
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/frame"
     android:layout_width="wrap_content"
@@ -21,7 +40,6 @@
             android:ellipsize="end"
             android:lines="3"
             android:padding="8dp"
-            android:text="textxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
             android:textColor="@color/card_sudopictitle"
             android:textSize="18sp"
             android:textStyle="italic" />
@@ -40,7 +58,6 @@
                 android:id="@+id/type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="text"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/App_color"
                 android:textSize="12sp" />
@@ -52,7 +69,6 @@
                 android:layout_alignParentLeft="true"
                 android:layout_below="@id/type"
                 android:gravity="center_vertical"
-                android:text="text"
                 android:textColor="@color/App_color"
                 android:textSize="12sp" />
 
@@ -73,7 +89,7 @@
                 android:id="@+id/decrypting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Decrypting..."
+                android:text="@string/decrypting"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/App_color"
                 android:textSize="12sp" />
