--- a/app/res/xml/preferences.xml
+++ b/app/res/xml/preferences.xml
@@ -2,30 +2,39 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
-        android:title="@string/vault_management_title"
-        android:key="vault">
+        android:key="security"
+        android:title="@string/security">
+        <Preference
+            android:key="stealth_mode"
+            android:summary="@string/stealth_mode_message"
+            android:title="@string/stealth_mode_title" />
+
+    </PreferenceCategory>
+    <PreferenceCategory
+        android:key="vault"
+        android:title="@string/vault_management_title">
 
         <Preference
             android:key="vault_root"
             android:title="@string/vault_location_title" />
         <Preference
             android:key="vault_move"
-            android:title="@string/move_all_vaults_title"
-            android:summary="@string/move_all_vaults_message"/>
+            android:summary="@string/move_all_vaults_message"
+            android:title="@string/move_all_vaults_title" />
 
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="@string/about_title"
-        android:key="about">
+        android:key="about"
+        android:title="@string/about_title">
 
         <Preference
             android:key="version"
             android:title="@string/version_title" />
         <Preference
             android:key="legal"
-            android:title="@string/legal_title"
-            android:summary="@string/legal" />
+            android:summary="@string/legal"
+            android:title="@string/legal_title" />
 
     </PreferenceCategory>
 
