Code Structure reformatting

--- a/app/res/layout/activity_main.xml
+++ b/app/res/layout/activity_main.xml
@@ -25,6 +25,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.doplgangr.secrecy.MainActivity">
+    tools:context="com.doplgangr.secrecy.Views.MainActivity">
 
 </RelativeLayout>
