--- a/app/res/layout/activity_launcher.xml
+++ b/app/res/layout/activity_launcher.xml
@@ -25,7 +25,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.doplgangr.secrecy.LauncherActivity">
+    tools:context="com.doplgangr.secrecy.Views.LauncherActivity">
 
     <TextView
         android:layout_width="wrap_content"
