--- a/app/res/menu/file_action.xml
+++ b/app/res/menu/file_action.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.doplgangr.secrecy.ListFileActivity">
+    tools:context="com.doplgangr.secrecy.Views.ListFileActivity">
 
 
     <!--<item android:id="@+id/action_send_secure"
