--- a/app/res/menu/launcher.xml
+++ b/app/res/menu/launcher.xml
@@ -20,7 +20,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.doplgangr.secrecy.LauncherActivity">
+    tools:context="com.doplgangr.secrecy.Views.LauncherActivity">
 
     <item
         android:id="@+id/action_settings"
