--- a/app/src/main/res/layout/donations_activity.xml
+++ b/app/src/main/res/layout/donations_activity.xml
@@ -29,7 +29,7 @@
         android:id="@+id/donations_activity_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical"/>
 
     <ScrollView
         android:layout_width="match_parent"
