--- a/app/src/main/res/layout/activity_files.xml
+++ b/app/src/main/res/layout/activity_files.xml
@@ -1,4 +1,4 @@
 <ViewStub xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/viewStub"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"></ViewStub>
+    android:layout_height="wrap_content"/>
