--- a/app/src/main/res/layout/new_credentials.xml
+++ b/app/src/main/res/layout/new_credentials.xml
@@ -31,7 +31,7 @@
         android:hint="@string/hint_vault_name" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/stealth_keycode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
