--- a/app/src/main/res/layout/dialog_confirm_stealth.xml
+++ b/app/src/main/res/layout/dialog_confirm_stealth.xml
@@ -19,7 +19,7 @@
   ~ under the License.
   -->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/password"
+    android:id="@+id/stealth_keycode"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
