--- a/app/src/main/res/layout/dialog_stealth.xml
+++ b/app/src/main/res/layout/dialog_stealth.xml
@@ -35,7 +35,7 @@
 
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/stealth_keycode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
