--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -23,13 +23,10 @@
     android:id="@+id/frame"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:foreground="@color/transparent">
+    android:layout_gravity="center_horizontal"
+    android:foreground="@color/transparent"
+    android:background="@drawable/bg_card">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/bg_card">
 
         <RelativeLayout
             android:id="@+id/dataLayout"
@@ -118,6 +115,7 @@
                 android:layout_height="@dimen/list_item_single_line_height"
                 android:layout_alignBottom="@+id/file_discard"
                 android:layout_toLeftOf="@+id/file_discard"
+                android:layout_toStartOf="@+id/file_discard"
                 android:scaleType="center"
                 android:src="@drawable/ic_action_not_secure" />
 
@@ -127,6 +125,7 @@
                 android:layout_height="@dimen/list_item_single_line_height"
                 android:layout_alignBottom="@+id/file_save"
                 android:layout_toLeftOf="@+id/file_save"
+                android:layout_toStartOf="@+id/file_save"
                 android:scaleType="center"
                 android:src="@drawable/ic_action_share" />
 
@@ -136,9 +135,9 @@
                 android:layout_height="@dimen/list_item_single_line_height"
                 android:layout_alignTop="@+id/file_share"
                 android:layout_toLeftOf="@+id/file_share"
+                android:layout_toStartOf="@+id/file_share"
                 android:scaleType="center"
                 android:src="@drawable/ic_action_edit" />
         </RelativeLayout>
-    </RelativeLayout>
 
 </FrameLayout>
