--- a/app/src/main/res/layout/select_dialog_singlechoice.xml
+++ b/app/src/main/res/layout/select_dialog_singlechoice.xml
@@ -23,4 +23,6 @@
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:paddingLeft="12dp"
     android:paddingRight="7dp"
+    android:paddingStart="12dp"
+    android:paddingEnd="7dp"
     android:textAppearance="?android:attr/textAppearanceMedium" />
