--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -13,4 +13,9 @@
         android:orderInCategory="80"
         android:title="@string/action_donate"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_support"
+        android:orderInCategory="100"
+        android:title="@string/action_support"
+        app:showAsAction="never" />
 </menu>
