--- a/app/src/main/res/values/strings_update_manager.xml
+++ b/app/src/main/res/values/strings_update_manager.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
-    <string name="title_activity_update_manager">Update Wizard</string>
     <string name="version_changed">You have recently downloaded/updated secrecy. This wizard is to help you manage version changes.</string>
     <string name="alpha0_1">alpha-0.1 / no previous installations</string>
     <string name="previous_version">\nPrevious version is %1$d (%2$s)</string>
