--- a/app/src/main/res/layout/file_item.xml
+++ b/app/src/main/res/layout/file_item.xml
@@ -25,7 +25,8 @@
     android:layout_height="wrap_content"
     android:foreground="@color/transparent">
 
-    <RelativeLayout
+    <ViewAnimator
+        android:id="@+id/viewAnimator"
         android:layout_width="match_parent"
         android:layout_height="@dimen/list_item_two_line_height"
         android:gravity="center_vertical"
@@ -35,7 +36,8 @@
         <RelativeLayout
             android:id="@+id/dataLayout"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical">
 
 
             <RelativeLayout
@@ -90,8 +92,8 @@
             android:id="@+id/DecryptLayout"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:visibility="gone">
+            android:layout_gravity="center_vertical"
+            android:padding="8dp">
 
 
             <TextView
@@ -118,8 +120,8 @@
             android:id="@+id/file_actions_layout"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:visibility="gone">
+            android:layout_gravity="center_vertical"
+            android:padding="8dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -180,6 +182,6 @@
                 android:scaleType="center"
                 android:src="@drawable/ic_action_edit" />
         </RelativeLayout>
-    </RelativeLayout>
+    </ViewAnimator>
 
 </FrameLayout>
