--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -21,12 +21,15 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/frame"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_gravity="center_horizontal"
-    android:foreground="@color/transparent"
-    android:background="@drawable/bg_card">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:foreground="@color/transparent">
 
+    <ViewAnimator
+        android:id="@+id/viewAnimator"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:gravity="center_vertical">
 
         <RelativeLayout
             android:id="@+id/dataLayout"
@@ -40,20 +43,21 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:background="@color/transparent" />
+                android:background="@color/transparent"
+                android:scaleType="centerCrop" />
 
         </RelativeLayout>
 
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/DecryptLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="8dp"
-            android:visibility="gone">
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:padding="8dp">
 
 
-            <TextView
+        <TextView
                 android:id="@+id/decrypting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -75,12 +79,12 @@
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/file_actions_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="8dp"
-            android:visibility="gone">
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:padding="8dp">
 
-            <LinearLayout
+        <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -139,5 +143,6 @@
                 android:scaleType="center"
                 android:src="@drawable/ic_action_edit" />
         </RelativeLayout>
+    </ViewAnimator>
 
 </FrameLayout>
