--- a/app/src/main/res/values/strings_file_handling.xml
+++ b/app/src/main/res/values/strings_file_handling.xml
@@ -31,6 +31,8 @@ If no or you don\'t understand, press cancel to quit.</string>
     <string name="error_cannot_create_vault_message">Either the vault already exists, or SDCard is unavailable now.</string>
     <string name="error_delete_password_incorrect">Password incorrect.</string>
     <string name="error_delete_password_incorrect_message">Deletion is aborted.</string>
+    <string name="error_rename_password_incorrect">Password incorrect.</string>
+    <string name="error_rename_password_incorrect_message">Rename is aborted.</string>
     <string name="decrypting">Decrypting…</string>
     <string name="action_decrypt">Decrypt</string>
     <string name="action_delete">Delete</string>
