Handle gallery out of memory gracefully.

--- a/app/src/main/res/values/strings_file_handling.xml
+++ b/app/src/main/res/values/strings_file_handling.xml
@@ -35,6 +35,8 @@ If no or you don\'t understand, press cancel to quit.</string>
     <string name="error_rename_password_incorrect_message">Rename is aborted.</string>
     <string name="error_decrypting_file">Error decrypting file.</string>
     <string name="error_decrypting_file_message">Please try again later.</string>
+    <string name="error_out_of_memory">Out of memory!</string>
+    <string name="error_out_of_memory_message">Seems like your device does not have enough power to house that much info. Please try again.</string>
     <string name="decrypting">Decrypting…</string>
     <string name="action_decrypt">Decrypt</string>
     <string name="action_delete">Delete</string>
