--- a/app/src/main/res/menu/file_action.xml
+++ b/app/src/main/res/menu/file_action.xml
@@ -16,6 +16,12 @@
         android:title="@string/action_decrypt"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/action_send"
+        android:icon="@drawable/ic_action_send"
+        android:orderInCategory="2"
+        android:title="@string/action_delete"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_delete"
         android:icon="@drawable/ic_action_discard"
         android:orderInCategory="2"
